--- a/password-gen.css
+++ b/password-gen.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    color: white;
 }
 *::selection {
     background-color: gold;
@@ -55,4 +56,20 @@ h1 {
     font-weight: 600;
     padding: 10px;
     width: fit-content;
+}
+
+button:hover {
+    cursor: pointer;
+}
+button:active {
+    background-color: rgba(203, 255, 124, 1);
+}
+
+#number-range {
+    color: white;
+    background-color: white;
+}
+
+input::placeholder {
+    color: white;
 }
